base/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    tailscale.com/proxy-class: "tailscale-small"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-grafana
              port:
                number: 80
  tls:
  - hosts:
    - grafana
